@startuml
note as n2
const creator = new Creator();
const chair = creator.createChair("A");
end note

class Creator {
    + create(type: string): Chair {};
}

interface Chair {}
class ChairA implements Chair {}
class ChairB implements Chair {}

Creator <-- Chair
Creator o-- ChairA
Creator o-- ChairB
@enduml